feat: add the frame to CV - headlines 1 and 2

--- a/index.html
+++ b/index.html
@@ -1,2 +1,30 @@
-! <DOCTYPE html>
-Here will be html markdown
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My CV</title>
+</head>
+<body>
+    <h1>Versinin Egor Andreevich</h1>
+
+
+    <h2>Personal and contact information</h2>
+
+    <h3>Self-representing</h3>
+
+    <h2>Education</h2>
+
+    <h2>Language powered skills</h2>
+
+    <h2>Work experience</h2>
+
+    <h2>Computing skills</h2>
+
+    <h2>My projects</h2>
+
+    <h2> Code</h2>
+
+
+</body>
+</html>
