feat: add link to my project and my snapshot

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Versinin Egor Andreevich</h1>
-
+    <img src="https://www.dropbox.com/scl/fi/cobww8g5dlxmqt28cn0ym/Image241018074522-0001.jpg?rlkey=gzn34cj1md93r5xsxcr8d1bs4&st=558e9dg2&dl=0" alt="My photo">
 
     <h2>Personal and contact information</h2>
 
@@ -22,7 +22,8 @@
     <h2>Computing skills</h2>
 
     <h2>My projects</h2>
-
+    <p><a href="https://github.com/BjornHola/rsschool-cv.git" target="_blank">My project is here</a></p>
+    
     <h2> Code</h2>
 
 
