--- a/index.html
+++ b/index.html
@@ -10,22 +10,74 @@
     <img src="https://www.dropbox.com/scl/fi/cobww8g5dlxmqt28cn0ym/Image241018074522-0001.jpg?rlkey=gzn34cj1md93r5xsxcr8d1bs4&st=558e9dg2&dl=0" alt="My photo">
 
     <h2>Personal and contact information</h2>
+    <p> Date and place of birth: 20-05-1990, Poltava, Ukraine<br>
+    Currently based on: Gomel, Belarus<br>
+    Contact info: +375 44 747 70 54,<br>
+    Email to contact me: broadherstby@gmail.com<br>
+    My discord name: bjornhola<br>
+    Marital status: single<br>
+   </p>
 
     <h3>Self-representing</h3>
+    I'm quite curious about the new realms of the knowledge in my 
+    life and always aspire to discover "new worlds" taking the 
+    challenge high and low. I'm striving to step into 
+    the world of IT, even I have just got only humanitarian 
+    background. New knowledge and new language command just 
+    will give me the new-scaled scope. My strenghtes are 
+    painstacking and attentive work before I meet the 
+    flawless and picture-perfect output. I love thinking 
+    outside the box; I can deal with multitasking challenges 
+    as well as I am able to be resilient, industrious and work 
+    with the immense capacity of data Currently I prioritise my 
+    learning and training as a JS-developer. My short-term 
+    goals are to finish first-grade RSSchool course and to 
+    obtain basic and also extended commands of JS, 
+    CSS and HTML.<br>
 
     <h2>Education</h2>
+    Graduated from BSU, Law Faculty, 2013.<br>
+    Also obtained Master of Law degree, 2017.<br>
+    Specialized in such topics as "Basics of the Criminal law - 
+    Complicity in crimes" and "Tax crimes in Belarus."<br>
 
     <h2>Language powered skills</h2>
+    I have got a good command of English. Currently I'm studying 
+    C1 level with my tutor.<br> 
+    Also before finished several courses of English:
+    <ul> 
+        <li>2011 special course "English for lawyers"(B2)</li>
+   <li>2016-2017 special course "Language Power Level. 
+    English Intermediate"(B1)</li>
+   <li>2019-2020 special course "English Upper-Intermediate"(B2)
+    </li>
+    <li>since 2021 actively have been studying English with tutor.
+    </li>
+    </ul>
+    Also have some command of Spanish - mostly 
+    speaking Spanish as studied this myself.<br>
 
     <h2>Work experience</h2>
-
+    <ol>
+<li>2013 - a period of probation in bank sphere: BelRosBank 
+(today's Alfa-Bank) as a legal counsel;</li>
+<li>2013-2019 - worked as a investigator and senior investigator 
+in the Investigative State Committee of Belarus, Minsk Bureau.</li> 
+</ol>
     <h2>Computing skills</h2>
-
+<ul><li>currently a learner in RSSchool: course "JS/Front-end. RU"</li></ul>
     <h2>My projects</h2>
     <p><a href="https://github.com/BjornHola/rsschool-cv.git" target="_blank">My project is here</a></p>
     
     <h2> Code</h2>
-
-
+    <p>Given task implied to fix a function that couldn't work 
+    properly. As followed then "return" directory was absent 
+    in the code, so this caused disfunctioning of the multiply.</p>
+    My code is here:<br>
+    
+    function multiply(a, b){<br>
+        return a * b;<br>
+    }<br>
+    multiply(2,3);
 </body>
 </html>
