fix: fix the bindk to css

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>My CV</title>
 </head>
 <body>
-    <h1>Versinin Egor Andreevich</h1>
+    <h1>Vershinin Egor Andreevich</h1>
     <img src="https://www.dropbox.com/scl/fi/cobww8g5dlxmqt28cn0ym/Image241018074522-0001.jpg?rlkey=gzn34cj1md93r5xsxcr8d1bs4&st=558e9dg2&dl=0" alt="My photo">
 
     <h2>Personal and contact information</h2>
