feat: add p1-p6 to text

--- a/index.html
+++ b/index.html
@@ -11,41 +11,41 @@
     <img src="https://www.dropbox.com/scl/fi/cobww8g5dlxmqt28cn0ym/Image241018074522-0001.jpg?rlkey=gzn34cj1md93r5xsxcr8d1bs4&st=558e9dg2&dl=0" alt="My photo">
 
     <h2>Personal and contact information</h2>
-    <p> Date and place of birth: 20-05-1990, Poltava, Ukraine<br>
+    <p1> Date and place of birth: 20-05-1990, Poltava, Ukraine<br>
     Currently based on: Gomel, Belarus<br>
     Contact info: +375 44 747 70 54,<br>
     Email to contact me: broadherstby@gmail.com<br>
     My discord name: bjornhola<br>
     Marital status: single<br>
-   </p>
+   </p1>
 
     <h3>Self-representing</h3>
-    I'm quite curious about the new realms of the knowledge in my 
-    life and always aspire to discover "new worlds" taking the 
-    challenge high and low. I'm striving to step into 
-    the world of IT, even I have just got only humanitarian 
+    <p2>I'm quite curious about the new realms of the knowledge in my 
+    life<br> and always aspire to discover "new worlds" taking the 
+    challenge high and low.<br> I'm striving to step into 
+    the world of IT, even I have just got only humanitarian<br> 
     background. New knowledge and new language command just 
-    will give me the new-scaled scope. My strenghtes are 
-    painstacking and attentive work before I meet the 
+    will give me<br> the new-scaled scope. My strenghtes are 
+    painstacking and attentive work before<br> I meet the 
     flawless and picture-perfect output. I love thinking 
-    outside the box; I can deal with multitasking challenges 
-    as well as I am able to be resilient, industrious and work 
-    with the immense capacity of data Currently I prioritise my 
+    outside the box;<br> I can deal with multitasking challenges 
+    as well as I am able to be resilient,<br> industrious and work 
+    with the immense capacity of data Currently I prioritize<br> my 
     learning and training as a JS-developer. My short-term 
-    goals are to finish first-grade RSSchool course and to 
-    obtain basic and also extended commands of JS, 
-    CSS and HTML.<br>
+    goals are to finish<br> first-grade RSSchool course and to 
+    obtain basic and also extended commands of JS,<br> 
+    CSS and HTML.<br></p2>
 
     <h2>Education</h2>
-    Graduated from BSU, Law Faculty, 2013.<br>
+    <p3>Graduated from BSU, Law Faculty, 2013.<br>
     Also obtained Master of Law degree, 2017.<br>
     Specialized in such topics as "Basics of the Criminal law - 
-    Complicity in crimes" and "Tax crimes in Belarus."<br>
+    Complicity in crimes" and "Tax crimes in Belarus."<br><p3>
 
     <h2>Language powered skills</h2>
-    I have got a good command of English. Currently I'm studying 
+    <p4>I have got a good command of English. Currently I'm studying 
     C1 level with my tutor.<br> 
-    Also before finished several courses of English:
+    Also finished several courses of English before:</p4>.
     <ul> 
         <li>2011 special course "English for lawyers"(B2)</li>
    <li>2016-2017 special course "Language Power Level. 
@@ -55,14 +55,14 @@
     <li>since 2021 actively have been studying English with tutor.
     </li>
     </ul>
-    Also have some command of Spanish - mostly 
-    speaking Spanish as studied this myself.<br>
+    <p5>Also have some command of Spanish - mostly 
+    speaking Spanish as studied this myself.<br></p5>
 
     <h2>Work experience</h2>
     <ol>
-<li>2013 - a period of probation in bank sphere: BelRosBank 
+<li>2013 - a period of probation in bank sphere:<br> BelRosBank 
 (today's Alfa-Bank) as a legal counsel;</li>
-<li>2013-2019 - worked as a investigator and senior investigator 
+<li>2013-2019 - worked as a investigator and senior investigator<br> 
 in the Investigative State Committee of Belarus, Minsk Bureau.</li> 
 </ol>
     <h2>Computing skills</h2>
@@ -71,9 +71,9 @@ in the Investigative State Committee of Belarus, Minsk Bureau.</li>
     <p><a href="https://github.com/BjornHola/rsschool-cv.git" target="_blank">My project is here</a></p>
     
     <h2> Code</h2>
-    <p>Given task implied to fix a function that couldn't work 
-    properly. As followed then "return" directory was absent 
-    in the code, so this caused disfunctioning of the multiply.</p>
+    <p6>Given task implied to fix a function that couldn't work 
+    properly.<br> As followed then "return" directory was absent 
+    in the code,<br> so this caused disfunctioning of the multiply.</p6>
     My code is here:<br>
     
     function multiply(a, b){<br>
