--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <img src="https://www.dropbox.com/scl/fi/cobww8g5dlxmqt28cn0ym/Image241018074522-0001.jpg?rlkey=gzn34cj1md93r5xsxcr8d1bs4&st=558e9dg2&dl=0" alt="My photo">
 
     <h2>Personal and contact information</h2>
-    <p1> Date and place of birth: 20-05-1990, Poltava, Ukraine<br>
+    <p> Date and place of birth: 20-05-1990, Poltava, Ukraine<br>
     Currently based on: Gomel, Belarus<br>
     Contact info: +375 44 747 70 54,<br>
     Email to contact me: broadherstby@gmail.com<br>
     My discord name: bjornhola<br>
     Marital status: single<br>
-   </p1>
+   </p>
 
     <h3>Self-representing</h3>
-    <p2>I'm quite curious about the new realms of the knowledge in my 
+    <p>I'm quite curious about the new realms of the knowledge in my 
     life<br> and always aspire to discover "new worlds" taking the 
     challenge high and low.<br> I'm striving to step into 
     the world of IT, even I have just got only humanitarian<br> 
@@ -34,18 +34,18 @@
     learning and training as a JS-developer. My short-term 
     goals are to finish<br> first-grade RSSchool course and to 
     obtain basic and also extended commands of JS,<br> 
-    CSS and HTML.<br></p2>
+    CSS and HTML.<br></p>
 
     <h2>Education</h2>
-    <p3>Graduated from BSU, Law Faculty, 2013.<br>
+    <p>Graduated from BSU, Law Faculty, 2013.<br>
     Also obtained Master of Law degree, 2017.<br>
-    Specialized in such topics as "Basics of the Criminal law - 
-    Complicity in crimes" and "Tax crimes in Belarus."<br><p3>
+    Specialized in such topics as "Basics of the Criminal law -
+    Complicity in crimes" and "Tax crimes in Belarus."<br><p>
 
     <h2>Language powered skills</h2>
-    <p4>I have got a good command of English. Currently I'm studying 
+    <p>I have got a good command of English. Currently I'm studying 
     C1 level with my tutor.<br> 
-    Also finished several courses of English before:</p4>.
+    Also finished several courses of English before:</p>.
     <ul> 
         <li>2011 special course "English for lawyers"(B2)</li>
    <li>2016-2017 special course "Language Power Level. 
@@ -55,8 +55,8 @@
     <li>since 2021 actively have been studying English with tutor.
     </li>
     </ul>
-    <p5>Also have some command of Spanish - mostly 
-    speaking Spanish as studied this myself.<br></p5>
+    <p>Also have some command of Spanish - mostly 
+    speaking Spanish as studied this myself.<br></p>
 
     <h2>Work experience</h2>
     <ol>
@@ -71,10 +71,10 @@ in the Investigative State Committee of Belarus, Minsk Bureau.</li>
     <p><a href="https://github.com/BjornHola/rsschool-cv.git" target="_blank">My project is here</a></p>
     
     <h2> Code</h2>
-    <p6>Given task implied to fix a function that couldn't work 
+    <p>Given task implied to fix a function that couldn't work 
     properly.<br> As followed then "return" directory was absent 
-    in the code,<br> so this caused disfunctioning of the multiply.</p6>
-    My code is here:<br>
+    in the code,<br> so this caused disfunctioning of the multiply.</p>
+    <p>My code is here:<br></p>
     
     function multiply(a, b){<br>
         return a * b;<br>
