feat: underline the paragraph,code to  stand out

--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@ in the Investigative State Committee of Belarus, Minsk Bureau.</li>
     <p><a href="https://github.com/BjornHola/rsschool-cv.git" target="_blank">My project is here</a></p>
     
     <h2> Code</h2>
-    <p>Given task implied to fix a function that couldn't work 
+    <p class="underline">Given task implied to fix a function that couldn't work 
     properly.<br> As followed then "return" directory was absent 
     in the code,<br> so this caused disfunctioning of the multiply.</p>
     <p>My code is here:<br></p>
     
-    function multiply(a, b){<br>
+    <code>function multiply(a, b){<br>
         return a * b;<br>
     }<br>
-    multiply(2,3);
+    multiply(2,3);</code>
 </body>
 </html>
